перенес счетчики реакций и просмотров в таблицы и добавил ротацию истории просмотров
